# deep-learning-with-pytorch-notebooks

./: LICENSE  README.md  chapter02_mathematical-building-blocks.ipynb  chapter03_introduction-to-ml-frameworks.ipynb  chapter04_classification-and-regression.ipynb  chapter05_fundamentals-of-ml.ipynb  chapter07_deep-dive-keras.ipynb  chapter08_image-classification.ipynb  chapter09_convnet-architecture-patterns.ipynb  chapter10_interpreting-what-convnets-learn.ipynb  chapter11_image-segmentation.ipynb  chapter12_object-detection.ipynb  chapter13_timeseries-forecasting.ipynb  chapter14_text-classification.ipynb  chapter15_language-models-and-the-transformer.ipynb  chapter16_text-generation.ipynb  chapter17_image-generation.ipynb  chapter18_best-practices-for-the-real-world.ipynb  pyproject.toml
